<resources>
    <string name="app_name">PlantApp</string>
    <string name="start">Start</string>
    <string name="welcome">WELCOME</string>
    <string name="place_order">Place Order</string>
    <string name="adaptive_brightness">Adaptive Brightness</string>
    <string name="level">Level</string>
    <string name="brightness">Brightness</string>
    <string name="bdt_0">BDT 0</string>
    <string name="price_bdt_500_each">Price (BDT 500 each)</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="tree_quantity">Tree Quantity</string>
    <string name="select_plant">Select Plant:</string>
    <string name="pothos">pothos</string>
    <string name="peace_lily">Peace Lily</string>
    <string name="rain_lily">Rain Lily</string>
    <string name="coin_plant">Coin Plant</string>
    <string name="select_payment_option">Select Payment Option:</string>
    <string name="bkash">Bkash</string>
    <string name="credit_card">Credit Card</string>
    <string name="cod">COD</string>
    <string name="rate_us">Rate Us</string>
    <string name="price_bdt_250_each">Price(BDT 250 Each)</string>
    <string name="plantapp">PlantApp</string>
    <string name="buy">Buy</string>
    <string name="desired_growth">Desired Growth</string>
    <string name="promotional_message">Promotional message</string>
    <string name="select_payment_method">Select Payment Method</string>
</resources>