<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/material_dynamic_neutral_variant80"
        tools:context=".OrderActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_plant"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/oak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/pothos"/>
        <CheckBox
            android:id="@+id/pine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/peace_lily"/>
        <CheckBox
            android:id="@+id/maple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/rain_lily"/>
        <CheckBox
            android:id="@+id/birch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coin_plant"/>
    </LinearLayout>

    <TextView
        android:id="@+id/trees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textAllCaps="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_payment_method"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <RadioGroup
        android:id="@+id/radioGroupCare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/bkash"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/credit_card"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/cod"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tree_quantity"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decrement"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/minus"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"/>


        <TextView
            android:id="@+id/quantityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="@string/_0"
            android:textSize="20sp" />

        <Button
            android:id="@+id/increment"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/plus"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_bdt_250_each"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bdt_0"
        android:textSize="18sp"
        android:textAllCaps="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desired_growth"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="40dp"/>


    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"/>

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginVertical="20dp"/>

    <Switch
        android:id="@+id/btn_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/promotional_message"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_us"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"
            android:rating="0"
            android:layout_gravity="center"
            android:progressTint="#D6EA15"
            android:progressBackgroundTint="#5A6026"
            android:paddingTop="16dp" />

    <Button
        android:id="@+id/order_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/place_order"/>

</LinearLayout>

</ScrollView>